[gd_scene load_steps=5 format=3 uid="uid://c35jywy4rwnw6"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_5x3bc"]
[ext_resource type="PackedScene" uid="uid://bq05puxycrtd" path="res://Scenes/Menu/menu_background.tscn" id="2_61b7d"]
[ext_resource type="Theme" uid="uid://deqou0uy8dcse" path="res://UI/Buttons/button_basic.tres" id="2_v8oa0"]
[ext_resource type="Theme" uid="uid://duictke4swjwo" path="res://UI/CharacterDialog/dialog_box.tres" id="3_2a5no"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_5x3bc")

[node name="MenuBackground" parent="." instance=ExtResource("2_61b7d")]
unique_name_in_owner = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 426.0
offset_top = 350.0
offset_right = 726.0
offset_bottom = 425.0
theme = ExtResource("2_v8oa0")
theme_override_font_sizes/font_size = 32
text = "Start
"

[node name="ExitButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 426.0
offset_top = 500.0
offset_right = 726.0
offset_bottom = 575.0
theme = ExtResource("2_v8oa0")
theme_override_font_sizes/font_size = 32
text = "Quit to Desktop"

[node name="GameNameLabel" type="RichTextLabel" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
offset_left = 376.0
offset_top = 250.0
offset_right = 776.0
offset_bottom = 290.0
theme = ExtResource("3_2a5no")
text = "The 500 Numbers Throne"

[connection signal="pressed" from="Control/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Control/ExitButton" to="." method="_on_exit_button_pressed"]
